# PORT-REPORT

./: .env  .gitignore  README.md  backend.Dockerfile  docker-compose.yml  frontend.Dockerfile  pyproject.toml
ATTACK_TEST/: test_1524.py  test_21.py  test_5432.py  test_6667.py  test_80.py  test_8180.py
Data/: cve&cpe_to_attack_tempate.csv
scripts/: seed_chroma.py  seed_postgres.py  test_attack.py  test_chroma_query.py  test_graph.py  test_research.py
src/port_report/: __init__.py
src/port_report/api/: main.py
src/port_report/api/core/: attack.py  graph.py  remedy_context.py  researcher.py  scanner.py  state.py  templates.py  validator.py
src/port_report/ui/: app.py
